# TorchTools

./: .build_docs.sh  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE.md  README.ipynb  README.md  build_docs.sh  demo-requirements.conda.yaml  pyproject.toml  requirements-dev.conda.yaml  requirements-dev.txt  requirements.cona.yaml  requirements.conda.yaml  setup-miniconda-patched-requirements-dev.conda.yaml  setup.py
.github/workflows/: code-quality.yml  conda-env.yml  doc-update.yml  python-package-conda.yml  static.yml  torch-tools-install.yml
demos/: attention-mil-demo.ipynb  autoencoder-demo.ipynb  conv_net_2d_mnist_demo.ipynb  denoising-diffusion.ipynb  dense_network.ipynb  dense_network_classification.ipynb  dense_network_regression.ipynb  dense_neural_network.ipynb  fc_net_classification.ipynb  fc_net_regression.ipynb  patchify_image_batch.ipynb  self-attention-mil.ipynb  shapes_dataset.ipynb  simple_conv_net_2d_mnist_demo.ipynb  unet_segmentation_arctic_ice_demo.ipynb  unet_segmentation_brain_mri_demo.ipynb  unet_semantic_segmentation_demo.ipynb  variational_autoencoder_demo.ipynb
docs/: .buildinfo  conf.py  dataset.html  dataset.rst  file_utils.html  file_utils.rst  genindex.html  index.html  index.rst  misc.html  misc.rst  models.html  models.rst  objects.inv  py-modindex.html  search.html  searchindex.js  torch_utils.html  torch_utils.rst  weight_init.html  weight_init.rst
docs/_modules/: index.html
docs/_sources/: dataset.rst.txt  index.rst.txt  models.rst.txt
src/torch_tools/: __init__.py  misc.py  torch_utils.py  weight_init.py
tests/: test_file_utils.py  test_misc.py  test_torch_utils.py  test_weight_init.py
tests/dataset/: test_dataset_argument_types.py  test_dataset_instantiation_arguments.py  test_dataset_iteration.py
torch_tools/: __init__.py  file_utils.py  misc.py  torch_utils.py  weight_init.py
(+89 files in other folders)
